create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="tabs2 cid-s2T5Tshbyz" id="tabs2-n">
+<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="tabs2 cid-s2T5Tshbyz" id="tabs2-n">
 
     
 
@@ -310,12 +310,12 @@
                 <div class="col-md-6">
                     <div class="social-list align-right">
                         <div class="soc-item">
-                            <a href="https://facebook.com/ip7100" target="_blank">
+                            <a href="https://www.facebook.com/JazerCode" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://facebook.com/ip7100" target="_blank">
+                            <a href="https://www.facebook.com/JazerCode" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                             </a>
                         </div>
