create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="tabs2 cid-s2T5Tshbyz" id="tabs2-n">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="tabs2 cid-s2T5Tshbyz" id="tabs2-n">
 
     
 
@@ -167,7 +167,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">
-                <blockquote><p>We build website for business, personal or for fun.</p><p>JazerCode is a loyal website partner. We transact simply.
+                <blockquote><p>We build website for business, personal and for fun.</p><p>JazerCode is a loyal website partner. We transact simply.
 </p><p>We create and maintain Creatively. You are in the right site.
 </p><p>Affordable yet Awesome.</p><p>All website that we build has a mobile integration platform ready because in that way your website traffic is amazingly increasing.</p></blockquote>
             </div>
