create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="tabs2 cid-s2T5Tshbyz" id="tabs2-n">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="tabs2 cid-s2T5Tshbyz" id="tabs2-n">
 
     
 
@@ -82,7 +82,7 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-5">“Be the Solution the Businesses by Providing Websites in Simply Creative and Quality yet Affordable .”
+                                <p class="mbr-text py-5 mbr-fonts-style display-5">“To be the Solution of the Businesses by Providing Websites in Simply Creative and Quality yet Affordable .”
 <br>
 <br></p>
                             </div>
