--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -195,7 +195,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">
-                <blockquote><p>We build website for business, personal and for fun.</p><p>JazerCode is a loyal website partner. We transact simply.
+                <blockquote><p>We build website for business, personal and for fun.</p><p>We also maintain your website to be competitive depends on you by weekly or monthly.</p><p>JazerCode is a loyal website partner. We transact simply.
 </p><p>We create and maintain Creatively. You are in the right site.
 </p><p>Affordable yet Awesome.</p><p>All website that we build has a mobile integration platform ready because in that way your website traffic is amazingly increasing.</p></blockquote>
             </div>
@@ -236,7 +236,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6k+tDMgNFzpVynzsvvZUjYj4EDde1FcEO6WcRJiw7Q3d//3qJIwHJJOMnHFNtjnrDQTgWXSKrEJoe1gcxkSl21uRfnEP9OhMJqMVxwTLeNJQG66lZHiKICgNsWwA2HFC">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="W3S7vR5ObkOuAX4ZK4WDpxVPXaMXrrjlI2oxmEE8P1EcjDKuP2DpzjKwyXmhh9/ZK0LePbG4aTfSkFT2/nxFA6xxBs7nwLdTco/viJaJIHU1QIhBX9ro8s240RDTmqNu">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -277,8 +277,7 @@
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
                     <p class="mbr-text testimonial-text mbr-fonts-style display-7">
-                       We develop as many websites as you like. We develop as many websites as you like. We develop as many websites as you like.
-                    </p>
+                       We develop as many websites as you like in order to serve you better.</p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">
                        Earl Bangot</p>
                     <p class="mbr-author-desc mbr-fonts-style display-7">
