create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -78,7 +78,7 @@
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
                     ONLINE MARKETING WEBSITE</h3>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
-                    We build website for business, personal and for fun with style.<br>Giving businesses the best opportunities online clients to sell and advertise with impact to the online world industry</p>
+                    We build website for business, personal and for fun with style.<br>Giving life to your businesses the best opportunity online clients to sell and advertise with impact to the online world industry.</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-info display-4" href="index.html#form4-l">
                         <span class="mbr-iconfont mbri-file"></span>BOOK US NOW</a></div>
             </div>
@@ -236,7 +236,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="W3S7vR5ObkOuAX4ZK4WDpxVPXaMXrrjlI2oxmEE8P1EcjDKuP2DpzjKwyXmhh9/ZK0LePbG4aTfSkFT2/nxFA6xxBs7nwLdTco/viJaJIHU1QIhBX9ro8s240RDTmqNu">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Pug6ZMYGZKt+gzrdD7p7njav9ScKFT6f2ML50WoPx+LTEDtQIkAaFUuaZv3GdEwU4IHSZKZP1c2IGtonvuLHQVYgqN9qdDRHk/abQFMwPBskmJ7Tu3GCcjQf3Fgs1tml">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
