--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -76,9 +76,9 @@
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">
                     WELCOME TO THE FUTURE</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
-                    ONLINE MARKETING WEBSITE</h3>
+                    ONLINE MARKETING WEBSITES</h3>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
-                    We build website for business, personal and for fun with style.<br>Giving life to your businesses the best opportunity online clients to sell and advertise with impact to the online world industry.</p>
+                    We build websites for business, personal and for fun with style.<br>Giving life to your businesses the best opportunity online clients to sell and advertise with impact to the online world industry.</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-info display-4" href="index.html#form4-l">
                         <span class="mbr-iconfont mbri-file"></span>BOOK US NOW</a></div>
             </div>
@@ -236,7 +236,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Pug6ZMYGZKt+gzrdD7p7njav9ScKFT6f2ML50WoPx+LTEDtQIkAaFUuaZv3GdEwU4IHSZKZP1c2IGtonvuLHQVYgqN9qdDRHk/abQFMwPBskmJ7Tu3GCcjQf3Fgs1tml">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="r1I0ZZEmdRGU3iUI8wF1QV4qfRmApabKCc8lxsli82ujOY7rZQYG2FVjHv7Ryd4NeSm0oX0BSiN/ZbyG3AUuU0kdplsxJcT6fw6DKjq+PIrR9vfB1tJ5wDaCG0pe+Suk">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
