create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -220,7 +220,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dyGkIm0BkEgW1swOYEeXAvgoVSEeyiRqZq1A41F7D8WpYd7u3n/jKr/zfMH82frQWYdRYwxtN/dAQUnlfzv/dIt4MjgjiXqFOXCCW8oOYi2NhU08saiwvFcK1ClWhx+k">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zJz/SDU6MMNvY+rh3SV3KuTKNzu8rbQgnIT+nImYsBw8neGbDaBPdbtXwNdO3vAbMechLxNHpaMNS1e4irjtPXAa8D9gAb+UhgxjjsZjVh1FZSj8fKs7F7P67CYfeYxU">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -267,11 +267,11 @@
             <div class="media-content px-3 align-self-center mbr-white py-2">
                     <p class="mbr-text testimonial-text mbr-fonts-style display-5">
                        We develop as many websites as you like in order to serve you better.</p>
-                    <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-2">
-                       Earl Bangot</p>
-                    <p class="mbr-author-desc mbr-fonts-style display-5">
+                    <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-4"><span style="font-weight: normal;">
+                       EARL BANGOT</span></p>
+                    <p class="mbr-author-desc mbr-fonts-style display-7"><em>
                        DEVELOPER
-                    </p>
+                    </em></p>
             </div>
         </div>
     </div>
