--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -133,8 +133,7 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                    CONTACT FORM
-                </h2>
+                    CONTACT US</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">We are happy to work with you soon!</h3>
             </div>
         </div>
@@ -143,7 +142,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BRV83B5fMUvwteayH4F4YDdBc8MTttyHG0CXN8oQdIHeU6kPrh+ye6CuyXbmyY8QVWvNnTUxIxjYxM8DvbbNxkSpUv6KsxiI6Z2Pv/jnOlABtvyd5PX8Fd5fDNR437KA">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Uwu2gcQwCHtnKz7wy0d0Bci+fdzd7mwy4NHXNltpna6kgRjaYA7DmKVPaI4XcmnASY2V26DzTTWraBTKrov0hRLGpvi4nQquioQJfbNRixkfKn45QsoK//PAOr+T9HBk">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -166,9 +165,7 @@
                             <label for="message-form1-z" class="form-control-label mbr-fonts-style display-7">Message</label>
                             <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-z"></textarea>
                         </div>
-                        <div class="col-md-12 input-group-btn align-center">
-                            <button type="submit" class="btn btn-primary btn-form display-4">SEND FORM</button>
-                        </div>
+                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-form btn-secondary display-4" href="mailto:jazercode@gmail.com">CONFIRM</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
