--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -142,7 +142,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Rh1UYet2I2qam5C3jwVWHIL5SxyKYGs85ou7ByRwhZ80C0sfzRIm0sILGKrVEtGIZRn8DNIm8pjpLk4JqTmlKrwTflL9ISEJ4YdSAB7In6stNA/9RQ17qUCpg4iIKU7J">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lgs37vwvpyzuRt8rVTOvhwLOfyisCsRNQ0EhI4pT0RahjDvmgcMnWa/OvGJUAXI/6uJe5grHG1aMdmfRESpwtw8yKTdqaM8qdmwriT34xbybtT0mwCXIOVG7K3059Fxb">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -205,7 +205,7 @@
                     <div id="tab2" class="tab-pane" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-5">"Taking Businesses to the Next Level."</p>
+                                <p class="mbr-text py-5 mbr-fonts-style display-5">"jazercode is a primary website developer,creating an accessible, reliable and responsive website impacting the  boundless business world."</p>
                             </div>
                         </div>
                     </div>
