--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -142,7 +142,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lgs37vwvpyzuRt8rVTOvhwLOfyisCsRNQ0EhI4pT0RahjDvmgcMnWa/OvGJUAXI/6uJe5grHG1aMdmfRESpwtw8yKTdqaM8qdmwriT34xbybtT0mwCXIOVG7K3059Fxb">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dQ6LfRnvLoWAz1TWRRL+bHt9ewsNm9LXs4DzSFQ7NVzmWckdsRKxgE4/MgpS+ZvlhTv0J3bIWE00+vOS3d+oQZyC/D9iyMZHIOzbcFSLLCf31Dvv1HFy7upkA96z8rlQ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -196,8 +196,7 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-5">“To be the Solution of the Businesses by Providing Websites in Simply Creative and Quality yet Affordable .”
-<br>
+                                <p class="mbr-text py-5 mbr-fonts-style display-5">JAZERCODE exists to advocate excelence in doing businesses by designing remarkable  websites  for the glory of God.<br>
 <br></p>
                             </div>
                         </div>
@@ -205,7 +204,7 @@
                     <div id="tab2" class="tab-pane" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-5">"jazercode is a primary website developer,creating an accessible, reliable and responsive website impacting the  boundless business world."</p>
+                                <p class="mbr-text py-5 mbr-fonts-style display-5">Jazercode is a primary website developer,creating an accessible, reliable and responsive website impacting the  boundless business world.</p>
                             </div>
                         </div>
                     </div>
