--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="twitter:title" content="JazerCode">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/jazercode-head-logo-head1-510x142.png" type="image/x-icon">
-  <meta name="description" content="The Solution the Businesses by Providing Websites in Simply Creative and Quality yet Affordable.">
+  <meta name="description" content="Jazercode is a primary website developer,creating an accessible, reliable and responsive website impacting the boundless business world.">
   
   
   <title>JazerCode</title>
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -142,7 +142,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dQ6LfRnvLoWAz1TWRRL+bHt9ewsNm9LXs4DzSFQ7NVzmWckdsRKxgE4/MgpS+ZvlhTv0J3bIWE00+vOS3d+oQZyC/D9iyMZHIOzbcFSLLCf31Dvv1HFy7upkA96z8rlQ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1W9OPnYQcGF+vi9nLgIEB0xihFwIfnT7LoBuq3DgsuVjgyHlmC3MZDG68K8o7opvB3v4wSyS/U9oSTumHzgNCaG80mlxiVAtS6ED9pwM1fT8GYCnW+ThI7Z4LyQri4WK">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
