--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -115,9 +115,15 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5">
-                <blockquote><p><span style="font-size: 1.09rem;">We transact simply...</span><br></p><p>We creatively....
-</p><p>We design with mobile... 
-</p><p>We maintain...</p></blockquote>
+                <blockquote><p>we simply transact business.
+</p><p>
+</p><p>We creatively link to social media sites.
+</p><p>
+</p><p>We design with mobile responsive platforms. 
+</p><p>
+</p><p>We provide security to our client as partner in online transactions.
+</p><p>
+</p><p>We maintain and organize website regularly.</p></blockquote>
             </div>
         </div>
     </div>
@@ -141,7 +147,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1oo+916w8XXIFPpcZTBsu1OOnzcpEHEnB7F8C3doX99CtLT3KgYVzAqnU889BpP6dds7nj5kWl2YOdhn2oV5tnH6MS8BBIvYbvLDfI3i5tergNqYfsnpZbK8KNup4e3W">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sLmhw+i63B/p9mu1bBgYYm8Vu+47FaUVjBcNfoZYlP43etH2eukD6dfpY6N3H+B1oYTrVoXJEyPNxzKtYdA4Kp9+l+1bXpMumFtxuz+lOgvo/2l0IdwN8BB00oFA9nDJ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -257,7 +263,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure pr-lg-5" style="width: 30%;">
-              <img src="assets/images/1519477-616506068416716-1691221116-o-1-413x531.jpg" alt="" title="">
+              <img src="assets/images/earl-bangot-430x430.jpeg" alt="" title="">
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
                     <p class="mbr-text testimonial-text mbr-fonts-style display-5">
