create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -117,7 +117,7 @@
             <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5">
                 <blockquote><p>we simply transact business.
 </p><p>
-</p><p>We creatively link to social media sites.
+</p><p>We professionally link to social media sites.
 </p><p>
 </p><p>We design with mobile responsive platforms. 
 </p><p>
@@ -147,7 +147,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sLmhw+i63B/p9mu1bBgYYm8Vu+47FaUVjBcNfoZYlP43etH2eukD6dfpY6N3H+B1oYTrVoXJEyPNxzKtYdA4Kp9+l+1bXpMumFtxuz+lOgvo/2l0IdwN8BB00oFA9nDJ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2kjn+dicqUBYF2w3IBExKOL2VFB1Qv4+/IHgQck4qxHQJKUpeTNCevmQAOqw6+3YdGxkjYSBgCu4qiWsMuX2BnPAIqx2LQSZRqUTa8TMs28X+RI1ipSriqpqAa5/MLLU">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -208,7 +208,7 @@
                     <div id="tab2" class="tab-pane" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-5">Jazercode is a primary website developer, creating an accessible, reliable, and responsive website impacting the  boundless business world.</p>
+                                <p class="mbr-text py-5 mbr-fonts-style display-5">JAZERCODE is a primary website developer, creating an accessible, reliable, and responsive website impacting the  boundless business world.</p>
                             </div>
                         </div>
                     </div>
