--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html#testimonials2-u">
                          <img src="assets/images/jazercode-head-logo-head1-510x142.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -147,7 +147,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qn1boxuxdFLLWCi2c6/OnLpJx9rZT1XI2bW9LqNn74pgkiQwH6ARPqczGZ3ZeF7VW2FovubNQU85mgdnMCTVkTZOb+h7lfxojql9c4rIWwSJOfUbfE09toIOoZy9jd6c">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="707LsTsSBJ+X6oElQPx18j0JYl83ZgM8MbmPK3nAWCAQ+2oXbCCbq92GXqX2CdhZrAhctE6Y/lyJmRK75I61fcW7m94F1dQ9OHIwVRoE77ZbCplQlYbl0Q6a+R5/ZH7I">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -288,7 +288,7 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.co/">
+                    <a href="index.html#features13-f">
                         <img src="assets/images/jazercode-logo-sign-1.png" alt="Mobirise" title="">
                     </a>
                 </div>
@@ -303,9 +303,7 @@
                 <h5 class="pb-3">
                     Contacts
                 </h5>
-                <p class="mbr-text">
-                    Email: support@jazercode.com
-                    <br>Phone: +63 948 8640 000<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;+63 945 5933 336</p>
+                <p class="mbr-text">Phone: +63 948 8640 000<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;+63 945 5933 336</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Other Business</h5>
