create github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-fullscreen mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-fullscreen mbr-parallax-background" id="header1-w">
 
     
 
@@ -229,7 +229,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SUyK5isbSGfc65OuLmBWFcQNjZBm+h/2bPekHh/iYk58VZP/FLEr+dQ0hT5JbYYDfASLmfWmTxz7i6oCdsedszWVDu81uTqOn/W/EHgOK+V2ife2wvoRlJabQioSDEVR">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LwghIs6t9HV3O/9yCPS++x6vrC5R6cTAtr8UyeGWlRR2+jN+LEgjqORkBr/gH7BI0f1B60JUHb+jVooXo5Y6PuTZgx9/kNsjU9lReKuiQ4/y4OSCgCZYpJgE1MPM255D">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -272,7 +272,7 @@
               <img src="assets/images/earl-bangot-430x430.jpeg" alt="" title="">
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                    <p class="mbr-text testimonial-text mbr-fonts-style display-5">We develop websites professionally. The leadtime normally in Website Design Process is 1-2 Weeks but we can arrange&nbsp;it depends on the said&nbsp;requirements.<br>So let's make it happen!<br>God Bless!&nbsp;<br></p>
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-5">We develop websites professionally. The leadtime normally in Website Design Process is 1-2 weeks but we can arrange&nbsp;it depends on the said&nbsp;requirements.<br>So let's make it happen!<br>God Bless!&nbsp;<br></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-4"><span style="font-weight: normal;">
                        EARL J.B.</span></p>
                     <p class="mbr-author-desc mbr-fonts-style display-7"><em>
