create github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header1 cid-s3dTMNsNZk mbr-fullscreen" id="header1-23">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-s3dTMNsNZk mbr-fullscreen" id="header1-23">
 
     
 
@@ -81,7 +81,7 @@
 </div><div>JazerCode is your partner in delivering your Ecommerce Business.
 </div><div>Let us help build your business with strategic, fun and style!&nbsp;</div></h3>
                 
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="index.html#info1-1f">
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="page6.html#header15-2o">
                         <span class="mbr-iconfont mbri-file"></span>MAKE AN APPOINTMENT<br></a></div>
             </div>
         </div>
