--- a/page2.html
+++ b/page2.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header15 cid-s3dw2Sfr9b" id="header15-1w">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header15 cid-s3dw2Sfr9b" id="header15-1w">
 
     
 
@@ -79,7 +79,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gfFIAmkxYXYDQkCzoNYvUJEuSmRdYJTnPPkh8DTCMqNaamFh8UOGMo+7Pd4mO0hXVLO8uUqeBUT98vRN7PAbUpwDQlg+9pAapgxavI+uuCdUsOVfJni5RFC0P4RhwYfM">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nsOF55FlArs+EcDWy85Tk49gsTiCn7KNt9akRkI098yAllJvV5YxmeiOd+C/NPddFAHa2EX9HA2BMqdgh0xbI+YYOKy8SJZ4n6LSDzXFncj5schSG+hYavVZArU+7vMX">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
