create github pages

--- a/page1.html
+++ b/page1.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="header15 cid-s3drO7MQxY" id="header15-1r">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header15 cid-s3drO7MQxY" id="header15-1r">
 
     
 
@@ -72,13 +72,13 @@
             <div class="mbr-white col-lg-8 col-md-7 content-container">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
                     LOGO DESIGN</h1>
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">A Logo is the Public Identification or Visual Recognition that shows what a company does.&nbsp;<br>We deliver the initial JPEG Logo Image File of Logo Design<br>within 2-3 business days.<br>Logo Design Package Incusions:<br>*JPEG Image File<br>*PNG Image File<br>*Vector PDF&nbsp;File<br>*Color Variation Guide<br>Drop a Line and tell us about your project.</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">A Logo is the Public Identification or Visual Recognition that shows what a company does.&nbsp;<br>We deliver the initial JPEG Logo Image File of Logo Design<br>within 5-10 working days.<br>Logo Design Package Incusions:<br>*JPEG Image File<br>*PNG Image File<br>*Vector PDF&nbsp;File<br>*Color Variation Guide<br>Drop a Line and tell us about your project.</p>
             </div>
             <div class="col-lg-4 col-md-5">
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uJ7ugFmOp/o2xq4z3IPeHTrMe6N3ljsLWvnpzSXMOTlBvcLU8T+QXpIS4GgTbBuyw5vJyRE2Z6FGJQtzVXXTbepCAtRtW6QmL0psnqRH1jGeHTeFl3Fx3HqDscFfdwEU">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2lgFp/O7FG4z1CA6ENe6GSnOwhaBsqAyC/arLfVI4fw/ccfJ8msytC/KcWzXmijUysBxitNFobHS1LINvVxV3oH5AQYE3Zs0WEn9v77nyvCM6BCQ7AQVHFuo4Fw0Su1w">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
