--- a/page2.html
+++ b/page2.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header15 cid-s3dw2Sfr9b" id="header15-1w">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="header15 cid-s3dw2Sfr9b" id="header15-1w">
 
     
 
@@ -71,15 +71,15 @@
         <div class="row">
             <div class="mbr-white col-lg-8 col-md-7 content-container">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">BRAND IDENTITY</h1>
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Everything what is Visual Language about your brand - <br>we call it Brand Identity or Corporate Identity.&nbsp;<br>We deliver the initial Mock-up Images of Brand Identity Design<br>within 3-5 Working Days.<br><br>Brand Identity Design Package Incusions:<br><br>(2)Stationery Letterhead PSD Template
-<br>(2)Stationery Business Card PSD Template
-<br>(1) Company Uniform Mock-up<br>(2) Advertising Mock-up<br>The Logo Design Package<br><br>Drop a Line and tell us about your project.</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Everything what is Visual Language about your brand - <br>we call it Brand Identity or Corporate Identity.&nbsp;<br>We deliver the initial Mock-up Images of Brand Identity Design<br>within 5-10 Working Days.<br><br>Brand Identity Design Package Incusions:<br><br>(2)Stationery Letterhead PSD Template
+<br>(2)Stationery Business Card PSD Template<br>
+(2) Advertising Signage Mock-up<br>(1) Company Uniform Mock-up<br>The Logo Design Package<br><br>Drop a Line and tell us about your project.</p>
             </div>
             <div class="col-lg-4 col-md-5">
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nsOF55FlArs+EcDWy85Tk49gsTiCn7KNt9akRkI098yAllJvV5YxmeiOd+C/NPddFAHa2EX9HA2BMqdgh0xbI+YYOKy8SJZ4n6LSDzXFncj5schSG+hYavVZArU+7vMX">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ygavR6HJxx8SSe4Bw9oy+lYNWPnW/XFV4Pq36gkLfvalJErOhhUezS//KceViuo6DjBLucZbKgkzlJdaA7gKQ3rGibQ3BpFeZFeDFj6WzGdj8bTUv2sGAe6P8iS9oJdx">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
